--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
-    "write-heading-ids": "docusaurus write-heading-ids"
+    "write-heading-ids": "docusaurus write-heading-ids",
+    "prebuild": "npm run docusaurus clear",
+    "postbuild": "echo Build completed successfully for Vercel deployment",
+    "vercel-build": "npm run build"
   },
   "dependencies": {
     "@docusaurus/core": "3.1.0",
