--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "write-heading-ids": "docusaurus write-heading-ids",
     "prebuild": "npm run docusaurus clear",
     "postbuild": "echo Build completed successfully for Vercel deployment",
-    "vercel-build": "npm run build"
+    "vercel-build": "VERCEL_ENV=true npm run build",
+    "prepare-deployment": "cross-env DEPLOY_TARGET=vercel npm run build"
   },
   "dependencies": {
     "@docusaurus/core": "3.1.0",
