--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,13 +1,13 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-qdrant-client==1.7.3
-openai==1.3.5
-psycopg[binary]==3.1.13
-neon-python==0.4.0
-pydantic==2.5.0
-python-dotenv==1.0.0
-pytest==7.4.3
-httpx==0.25.2
-pyjwt==2.8.0
+fastapi==0.115.0
+uvicorn[standard]==0.31.0
+qdrant-client==1.11.1
+cohere==5.9.3
+psycopg[binary]==3.2.3
+asyncpg==0.29.0
+pydantic==2.9.2
+python-dotenv==1.0.1
+pytest==8.3.3
+httpx==0.27.2
+pyjwt==2.9.0
 passlib[bcrypt]==1.7.4
-python-multipart==0.0.6
+python-multipart==0.0.12
