--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,7 +3,7 @@ uvicorn[standard]==0.31.0
 qdrant-client==1.11.1
 cohere==5.9.3
 psycopg[binary]==3.2.3
-asyncpg==0.29.0 --only-binary :all:
+asyncpg==0.31.0
 pydantic==2.9.2
 python-dotenv==1.0.1
 pytest==8.3.3
