--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,21 @@
-# Backend Environment Variables
-OPENAI_API_KEY=your_openai_api_key_here
-QDRANT_URL=your_qdrant_cluster_url_here
-QDRANT_API_KEY=your_qdrant_api_key_here
-NEON_DB_URL=your_neon_postgres_connection_string_here
-API_KEY=your_backend_api_key_here
+# Better-Auth Configuration
+BETTER_AUTH_URL=
+BETTER_AUTH_SECRET=
+
+# Neon Postgres Database
+DATABASE_URL=
+
+# Cohere API for RAG
+COHERE_API_KEY=
+
+# Qdrant Vector Database
+QDRANT_URL=
+QDRANT_API_KEY=
+
+
+# Backend API Configuration
+API_KEY=
+BACKEND_PORT=8000
+
+# Session Configuration
+SESSION_TIMEOUT_MINUTES=30
