--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,3 +1,4 @@
-# Frontend Environment Variables
-REACT_APP_API_BASE_URL=http://localhost:8000
-REACT_APP_TITLE="Physical AI & Humanoid Robotics Textbook"
+# Frontend Configuration
+REACT_APP_BACKEND_URL=http://localhost:8000
+REACT_APP_API_KEY=
+REACT_APP_BETTER_AUTH_URL=
