back-auth-implement

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,20 +1,19 @@
-# Better-Auth Configuration
-BETTER_AUTH_URL=
-BETTER_AUTH_SECRET=
+BETTER_AUTH_SECRET=4Kwdw5XV*mHCqhQvXVlBeRKJmnycy
+BETTER_AUTH_URL=http://localhost:3000
 
 # Neon Postgres Database
-DATABASE_URL=
+DATABASE_URL=postgresql://neondb_owner:n********x@ep-wild-waterfall-ahcg****us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
 
 # Cohere API for RAG
-COHERE_API_KEY=
+COHERE_API_KEY=MOJa4rt6fhs8*****SNtVHws97tHjDMTI0
 
 # Qdrant Vector Database
-QDRANT_URL=
-QDRANT_API_KEY=
+QDRANT_URL=https://6a8134e4-c8*****7cebfd388.europe-west3-0.gcp.cloud.qdrant.io
+QDRANT_API_KEY=eyJhbGciOiJIUzI1NiIsInR5cC*****JtIn0.CNC2JVneN2fMobiEJDjz3jEXbctfuMqla9GydqnL_Uk
 
 
 # Backend API Configuration
-API_KEY=
+API_KEY=jK39fd82la9SD****23jsdf2JKlO3mf029slf92jf023sdmf203
 BACKEND_PORT=8000
 
 # Session Configuration
